// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-sentry-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`arrow-anonymous-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};
export default componentName;"
`;

exports[`arrow-anonymous-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};
export default componentName;"
`;

exports[`arrow-anonymous-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};
export default componentName;"
`;

exports[`arrow-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`arrow-noreturn snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(\\"div\\", {
  \\"data-sentry-component\\": \\"componentName\\"
}, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-sentry-component\\": \\"componentName\\",
  \\"data-sentry-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment-no-whitespace snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-sentry-component\\": \\"componentName\\",
  \\"data-sentry-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"), /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hola Sol\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment-once snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-sentry-component\\": \\"componentName\\",
  \\"data-sentry-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"), /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hola Sol\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-sentry-component\\": \\"componentName\\",
  \\"data-sentry-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-sentry-component\\": \\"componentName\\",
  \\"data-sentry-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-annotate-trivial-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, \\"Hello world\\");
export default componentName;"
`;

exports[`arrow-noreturn-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-noreturn-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
export default componentName;"
`;

exports[`arrow-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`arrow-shorthand-fragment snapshot matches 1`] = `
"import React from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`component snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      \\"data-sentry-component\\": \\"componentName\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default componentName;"
`;

exports[`component-annotate-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }
}
export default componentName;"
`;

exports[`component-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
      \\"data-sentry-component\\": \\"componentName\\",
      \\"data-sentry-source-file\\": \\"filename-test.js\\"
    }, \\"Hello world\\"));
  }
}
export default componentName;"
`;

exports[`component-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
      \\"data-sentry-component\\": \\"componentName\\",
      \\"data-sentry-source-file\\": \\"filename-test.js\\"
    }, \\"Hello world\\"));
  }
}
export default componentName;"
`;

exports[`component-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, \\"A\\");
  }
}
export default componentName;"
`;

exports[`component-fragment-native snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, \\"A\\");
  }
}
export default componentName;"
`;

exports[`component-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }
}
export default componentName;"
`;

exports[`component-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }
}
export default componentName;"
`;

exports[`handles ternary operation returned by function body 1`] = `
"const maybeTrue = Math.random() > 0.5;
export default function componentName() {
  return maybeTrue ? '' : /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\",
    \\"data-sentry-component\\": \\"componentName\\"
  });
}"
`;

exports[`nonJSX snapshot matches 1`] = `
"import React, { Component } from 'react';
class TestClass extends Component {
  test() {
    return true;
  }
}
export default TestClass;"
`;

exports[`option-attribute snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-sentry-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`option-format snapshot matches 1`] = `
"import React, { Component } from 'react';
const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-sentry-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};
export default componentName;"
`;

exports[`pure snapshot matches 1`] = `
"import React from 'react';
class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      \\"data-sentry-component\\": \\"PureComponentName\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default PureComponentName;"
`;

exports[`pure-native snapshot matches 1`] = `
"import React from 'react';
class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      dataSentryComponent: \\"PureComponentName\\",
      dataSentrySourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default PureComponentName;"
`;

exports[`pureComponent-fragment snapshot matches 1`] = `
"import React, { Fragment } from 'react';
class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default PureComponentName;"
`;

exports[`pureComponent-react-fragment snapshot matches 1`] = `
"import React from 'react';
class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default PureComponentName;"
`;

exports[`pureComponent-shorthand-fragment snapshot matches 1`] = `
"import React from 'react';
class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }
}
export default PureComponentName;"
`;

exports[`rawfunction snapshot matches 1`] = `
"import React, { Component } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-sentry-component\\": \\"SubComponent\\"
  }, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-sentry-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-annotate-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\",
    \\"data-sentry-component\\": \\"componentName\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\",
    \\"data-sentry-component\\": \\"componentName\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\",
    \\"data-sentry-component\\": \\"componentName\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\"
  }));
};
export default componentName;"
`;

exports[`rawfunction-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';
function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}
const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-sentry-element\\": \\"SubComponent\\"
  }));
};
export default componentName;"
`;

exports[`tags snapshot matches 1`] = `
"import React, { Component } from 'react';
import { StyleSheet, Text, TextInput, View, Image, UIManager } from 'react-native';
UIManager.getViewManagerConfig('RCTView').NativeProps.fsClass = \\"String\\";
class Bananas extends Component {
  render() {
    let pic = {
      uri: 'https://upload.wikimedia.org/wikipedia/commons/d/de/Bananavarieties.jpg'
    };
    return /*#__PURE__*/React.createElement(Image, {
      source: pic,
      style: {
        width: 193,
        height: 110,
        marginTop: 10
      },
      fsClass: \\"test-class\\",
      dataSentryElement: \\"Image\\",
      dataSentryComponent: \\"Bananas\\",
      dataSentrySourceFile: \\"filename-test.js\\"
    });
  }
}
class PizzaTranslator extends Component {
  constructor(props) {
    super(props);
    this.state = {
      text: ''
    };
  }
  render() {
    return /*#__PURE__*/React.createElement(View, {
      style: {
        padding: 10
      },
      dataSentryElement: \\"View\\",
      dataSentryComponent: \\"PizzaTranslator\\",
      dataSentrySourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(TextInput, {
      style: {
        backgroundColor: '#000',
        color: '#eee',
        padding: 8
      },
      placeholder: \\"Type here to translate!\\" // not supported on iOS
      ,
      onChangeText: text => this.setState({
        text
      }),
      value: this.state.text,
      dataSentryElement: \\"TextInput\\",
      dataSentrySourceFile: \\"filename-test.js\\"
    }), /*#__PURE__*/React.createElement(Text, {
      style: {
        padding: 10,
        fontSize: 42
      },
      dataSentryElement: \\"Text\\",
      dataSentrySourceFile: \\"filename-test.js\\"
    }, this.state.text.split(' ').map(word => word && '🍕').join(' ')));
  }
}
export default function App() {
  return /*#__PURE__*/React.createElement(View, {
    style: styles.container,
    dataSentryElement: \\"View\\",
    dataSentryComponent: \\"App\\",
    dataSentrySourceFile: \\"filename-test.js\\"
  }, /*#__PURE__*/React.createElement(Text, {
    style: {
      color: '#eee'
    },
    dataSentryElement: \\"Text\\",
    dataSentrySourceFile: \\"filename-test.js\\"
  }, \\"FullStory ReactNative testing app\\"), /*#__PURE__*/React.createElement(Bananas, {
    dataSentryElement: \\"Bananas\\",
    dataSentrySourceFile: \\"filename-test.js\\"
  }), /*#__PURE__*/React.createElement(PizzaTranslator, {
    dataSentryElement: \\"PizzaTranslator\\",
    dataSentrySourceFile: \\"filename-test.js\\"
  }));
}
const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    alignItems: 'stretch',
    backgroundColor: '#222',
    alignItems: 'center',
    justifyContent: 'center'
  }
});"
`;

exports[`unknown-element snapshot matches 1`] = `
"import React, { Component } from 'react';
class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(\\"bogus\\", {
      \\"data-sentry-element\\": \\"bogus\\",
      \\"data-sentry-component\\": \\"componentName\\",
      \\"data-sentry-source-file\\": \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"A\\"));
  }
}
export default componentName;"
`;
